<resources>
    <string name="app_name">MyUNN</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="menu_home">Home</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UNN Crime Watch</string>
    <string name="nav_header_subtitle">Help keep UNN safe...</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="call">Call Emergency</string>
    <string name="upload">Upload Post</string>

    <string name="upload_hint">Post...</string>

    <string name="Emergency_call_AE">A/E</string>
    <string name="Emergency_call_AE_subText">Adverse Experience</string>
    <string name="Emergency_call_AE_number">07036885702</string>


    <string name="Emergency_call_Ward">Ward</string>
    <string name="Emergency_call_Ward_subText">Medical Ward</string>
    <string name="Emergency_call_Ward_number">07061393622</string>

    <string name="Emergency_call_Fire">Fire</string>
    <string name="Emergency_call_Fire_subText">Fire Department</string>
    <string name="Emergency_call_Fire_number">07063493677</string>

    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="new_sign_up">New Account? Sign up</string>

    <string name="fullname">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an Account? Sign in</string>


    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="title_activity_test">test</string>
    <string name="search">search</string>
    <string name="sign_out_menu_label">Sign out</string>
    <string name="edit_profile_menu_label">Edit profile</string>
    <string name="user_username">\@username</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
