<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.x.myunn.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_profile"
            app:destination="@id/nav_profile"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_home_to_postDetailFragment"
            app:destination="@id/postDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_nav_home_to_nav_showusers"
            app:destination="@id/nav_showusers"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_starredPost"
        android:name="com.x.myunn.ui.saves.SavesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_saves" >
        <action
            android:id="@+id/action_nav_starredPost_to_nav_profile"
            app:destination="@id/nav_profile"
            app:enterAnim="@anim/slide_out_right"
            app:exitAnim="@anim/slide_in_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_starredPost_to_nav_showusers"
            app:destination="@id/nav_showusers"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_starredPost_to_postDetailFragment"
            app:destination="@id/postDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.x.myunn.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/action_nav_notifications_to_postDetailFragment"
            app:destination="@id/postDetailFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_notifications_to_nav_profile"
            app:destination="@id/nav_profile"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_upload"
        android:name="com.x.myunn.ui.upload.UploadFragment"
        android:label="@string/upload"
        tools:layout="@layout/fragment_upload">
        <action
            android:id="@+id/action_nav_upload_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"
            app:popUpTo="@id/mobile_navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.x.myunn.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_nav_profile_to_nav_profilesetting"
            app:destination="@id/nav_profilesetting"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_nav_profile_to_nav_showusers"
            app:destination="@id/nav_showusers"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <argument
            android:name="profileId"
            app:argType="string"
            android:defaultValue="user" />
        <action
            android:id="@+id/action_nav_profile_to_postDetailFragment"
            app:destination="@id/postDetailFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_profile_to_nav_starredPost"
            app:destination="@id/nav_starredPost"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/nav_search"
        android:name="com.x.myunn.ui.search.SearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_nav_search_to_nav_profile"
            app:destination="@id/nav_profile"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_right"
            app:popExitAnim="@anim/slide_in_left" />
    </fragment>

    <fragment
        android:id="@+id/nav_showusers"
        android:name="com.x.myunn.ui.showUsers.ShowUsersFragment"
        android:label="Show users"
        tools:layout="@layout/fragment_show_users">
        <argument
            android:name="tiltle"
            app:argType="string" />
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_nav_showusers_to_nav_profile"
            app:destination="@id/nav_profile"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_profilesetting"
        android:name="com.x.myunn.ui.profileSetting.ProfileSettingFragment"
        android:label="Edit Profile"
        tools:layout="@layout/fragment_profile_setting">
        <action
            android:id="@+id/action_nav_profilesetting_to_nav_profile"
            app:destination="@id/nav_profile"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"
            app:popUpTo="@id/nav_profile"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/postDetailFragment"
        android:name="com.x.myunn.ui.postDetail.PostDetailFragment"
        android:label="Post Detail"
        tools:layout="@layout/fragment_post_detail"
        >
        <action
            android:id="@+id/action_postDetailFragment_to_nav_profile"
            app:destination="@id/nav_profile"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_postDetailFragment_to_nav_showusers"
            app:destination="@id/nav_showusers"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <argument
            android:name="postId"
            app:argType="string" />
        <argument
            android:name="publisherId"
            app:argType="string" />
    </fragment>
</navigation>
